@@ -1,4 +1,12 @@
+2008-11-09  Gerd Kohlberger  <gerdk@svn.gnome.org>
+
+	Change to new interface descriptions.
+	
+	* po/POTFILES.in: Use new .ui files
+	* po/POTFILES.skip: Ignore old .glade files
+
 2008-11-04 Francesco Fumanti <frfumanti@svn.gnome.org>
+
 	* configure.ac:
 	* README:
 
